--- a/package.json
+++ b/package.json
@@ -19,5 +19,26 @@
   "bugs": {
     "url": "https://github.com/duffbuster/webpack-brownbag-workshop/issues"
   },
-  "homepage": "https://github.com/duffbuster/webpack-brownbag-workshop#readme"
+  "homepage": "https://github.com/duffbuster/webpack-brownbag-workshop#readme",
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.8",
+    "precss": "^2.0.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^2.2.1"
+  }
 }
