--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
@@ -39,6 +40,8 @@
     "precss": "^2.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
-    "webpack": "^2.2.1"
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^2.2.1",
+    "webpack-merge": "^4.1.1"
   }
 }
