--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Udig Studio Webpack Brownbag Workshop",
   "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf dist",
+    "prestart": "npm run clean",
+    "prod": "npm run clean && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "start": "npm run server -- --hotOnly",
+    "server": "npm run webpack-dev-server -- --config config/webpack.dev.js --open --progress --profile --watch --content-base src/",
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "repository": {
     "type": "git",
@@ -35,13 +41,16 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.8",
     "precss": "^2.0.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^2.2.1",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.9.4",
     "webpack-merge": "^4.1.1"
   }
 }
